test/language/spec/containment/invalid/external_on_fnblock.topo
// TEST: external-on-fnblock
// EXPECT-ERROR: 'external' cannot be applied to fn blocks

namespace app {

public:
  void process();
  void init();

  external fn process {
    stage<1> init();
  }

}
